kubernetes/apps/webtrees/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtrees
  namespace: apps
  labels:
    app.kubernetes.io/name: webtrees
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: webtrees
